--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>JSON Pointer Linter</title>
-    <meta name="description" content="">
+    <title>JSON Pointer Tester</title>
+    <meta name="description" content="A tool for testing a JSON pointer against a JSON object.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for 'head'}}
